# apollo

./: ApolloCoordinatorABI.json  Cargo.toml  Makefile  README.md  apollo_instance.wasm  canister_ids.json  dfx.json
assets/: ApolloCoordinatorABI.json  MulticallABI.json  TargetFunctionABI.json  TargetFunctionsABI.json  apollo_instance.wasm
src/aboba/: Cargo.toml
src/aboba/src/: lib.rs
src/apollo/: Cargo.toml  apollo.did
src/apollo/src/: lib.rs  memory.rs
src/apollo/src/methods/: allowances.rs  apollo_instance_canister.rs  balances.rs  canister.rs  execution.rs  mod.rs
src/apollo/src/migrations/: mod.rs
src/apollo/src/types/: apollo_instance.rs  candid_types.rs  custom_return_types.rs  errors.rs  mod.rs
src/apollo/src/utils/: macros.rs  mod.rs  nat.rs  web3.rs
src/apollo_backend/: Cargo.toml
src/apollo_instance/: Cargo.toml  apollo_instance.did
src/apollo_instance/src/: lib.rs  memory.rs
src/apollo_instance/src/jobs/: apollo_coordinator_polling.rs  logs_polling.rs  mod.rs  tx_polling.rs  withdraw.rs
src/apollo_instance/src/methods/: allowances.rs  balances.rs  canister.rs  execution.rs  mod.rs
src/apollo_instance/src/migrations/: mod.rs
src/apollo_instance/src/types/: allowances.rs  asset_data.rs  balances.rs  mod.rs  timer.rs  withdraw.rs
src/apollo_instance/src/utils/: macros.rs  mod.rs
src/apollo_utils/: Cargo.toml
src/apollo_utils/src/: address.rs  apollo_instance.rs  canister.rs  errors.rs  http.rs  lib.rs  macros.rs  multicall.rs  nat.rs  siwe.rs  sybil.rs  time.rs  web3.rs
src/apollo_utils/src/web3/: evm_canister_transport.rs  mod.rs
