[package]
name = "apollo_instance"
version = "0.1.0"
edition = "2021"


[lib]
name = "apollo_instance"
crate-type = ["cdylib"]

[features]
default = ["build_canister"]
build_canister = []


[dependencies]
anyhow = "1.0.79"
borsh = "1.3.0"
candid = "0.9"
ic-utils = { package = "canistergeek_ic_rust", version = "0.4.2" }
ciborium = "0.2.1"
ic-cdk = "0.11"
ic-stable-structures = "0.6.1"
serde = { version = "1.0.194", features = ["derive"] }
