[package]
name = "apollo_instance"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[features]
default = ["build_canister"]
build_canister = []


[dependencies]
anyhow = "1.0.79"
borsh = "1.3.0"
candid = "0.9"
ic-utils = { package = "canistergeek_ic_rust", version = "0.4.2" }
ciborium = "0.2.1"
ic-cdk = "0.11"
ic-cdk-timers = "0.5.0"
ic-stable-structures = "0.6.1"
serde = { version = "1.0.194", features = ["derive"] }
ic-web3-rs = { git = "https://github.com/orally-network/ic-web3-rs", version = "0.1.3" }
# ic-web3-rs = { path = "../../../ic-web3-rs", version = "0.1.3" }
apollo_utils = { path = "../apollo_utils" }
serde_json = "1.0.111"
serde_bytes = "0.11.12"

slotmap = { version = "1.0.6", features = ["serde"] }
thiserror = "1.0.56"
siwe = "0.6.0"
