[package]
name = "apollo_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
candid = "0.9"
thiserror = "1.0.56"
ic-cdk = "0.11"
ic-web3-rs = { git = "https://github.com/orally-network/ic-web3-rs", version = "0.1.3" }
hex = "0.4.3"
ic-cdk-timers = "0.5.0"
tokio = { version = "1.35.1", features = ["sync"] }
ic-utils = { package = "canistergeek_ic_rust", version = "0.4.2" }
num-bigint = "0.4.4"
serde = { version = "1.0.196", features = ["derive"] }
