[package]
name = "apollo_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
candid = "0.9"
thiserror = "1.0.56"
ic-cdk = "0.11"
ic-web3-rs = { git = "https://github.com/orally-network/ic-web3-rs", version = "0.1.3" }
# ic-web3-rs = { path = "../../../ic-web3-rs", version = "0.1.3" }
hex = "0.4.3"
ic-cdk-timers = "0.4.0"
tokio = { version = "1.35.1", features = ["sync"] }
ic-utils = { package = "canistergeek_ic_rust", version = "0.4.2" }
num-bigint = "0.4.4"
serde = { version = "1.0.196", features = ["derive"] }
siwe = "0.6.0"
time = "0.3.32"
derive_builder = "0.13.0"
serde_json = "1.0.113"
ic-stable-structures = "0.6.1"
ciborium = "0.2.1"
paginate = "1.1.11"
jsonrpc-core = "18.0.0"

cketh-common = { git = "https://github.com/dfinity/ic", rev = "8511846fb6352a0a4f9abae1a8fc8569aeba5f10", package = "ic-cketh-minter" }
# cketh-common = { git = "https://github.com/dfinity/ic", tag = "release-2024-02-07_23-01", package = "ic-cketh-minter" }
